<?xml version="1.0"?>
<package format="2">
  <name>libs</name>
  <version>0.0.0</version>
  <description>The libs package</description>
  <maintainer email="stepan@todo.todo">stepan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
